--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,8 +19,8 @@ img {
   padding-left: 2rem;
 }
 
-.logo {
-  width: 120px;
+.header__logo {
+  max-width: 50%;
 }
 
 .section {
@@ -45,22 +45,38 @@ img {
 .descripcion {
   background-color: #91918D;
   font-family: "Raleway", sans-serif;
-  text-align: center;
   color: #FFF;
-  padding-bottom: 10px;
+  padding-bottom: 50px;
+}
+
+h3 {
+  font-size: 50px;
+  text-align: center;
+}
+
+p {
+  font-size: 18px;
+  padding-left: 350px;
+  padding-right: 350px;
+  padding-bottom: 20px;
+  text-align: left;
 }
 
 .limache {
   background-color: #FFF;
   color: #686963;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
 }
 
-h3 {
-  font-size: 50px;
+h2 {
+  font-size: 70px;
 }
 
-p {
-  font-size: 18px;
+.img {
+  padding-top: 70px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 /*# sourceMappingURL=main.css.map */
